# programmiersprachen-raytracer

framework/: Box.cpp  Box.hpp  CMakeLists.txt  Light.hpp  Material.cpp  Material.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  camera.hpp  color.hpp  hitpoint.hpp  illumination.cpp  illumination.hpp  light.hpp  ray.hpp  renderer.cpp  renderer.hpp  scene.hpp  vec3_functions.cpp  vec3_functions.hpp
source/: CMakeLists.txt  create_animation.sh  create_sdf_file.py  image_producer.py  initial.sdf  raytracer  raytracer.cpp  scene_1.sdf  tests.cpp
